meeting 참여 & 찜기능 구현